dash-symbol replaced with underscore if named with it to avoid path-collision